--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Properties/Resources.resx
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Properties/Resources.resx
@@ -168,4 +168,7 @@
 	<data name="StatusError" xml:space="preserve">
 		<value>Application error. Contact support.</value>
 	</data>
+	<data name="Loading" xml:space="preserve">
+		<value>Loading...</value>
+	</data>
 </root>
